--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -1,32 +1,53 @@
 name: collect
+
 on: 
   push:
     branches: 
-    - main
+      - main
 
   workflow_dispatch:
+
 jobs:
   collect:
     permissions:                   
       contents: write              
       pull-requests: write          
+
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.13'
-        cache: 'pip'
-    - run: pip install -r python/requirements.txt
-    - run: pip install selenium webdriver-manager bs4 pyperclip tqdm
-    - name: Collect
-      run: |
-        cd python && python collect.py 
-    - name: Commit && Push
-      run: |
-         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-         git config --local user.name "github-actions[bot]"
-         git add output
-         git diff-index --quiet HEAD output || git commit -m "feat: update collect"
-         git push
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: |
+          pip install -r python/requirements.txt
+          pip install selenium webdriver-manager bs4 pyperclip tqdm
+
+      # ✅ 关键修改 1：即使脚本失败也继续执行
+      - name: Collect
+        run: |
+          cd python && python collect.py
+        continue-on-error: true
+
+      # ✅ 关键修改 2：无论成功失败都执行 commit/push
+      - name: Commit && Push
+        if: always()
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+
+          # 确保 output 目录存在
+          mkdir -p output
+
+          git add output || true
+
+          # 如果有变更才 commit
+          git diff-index --quiet HEAD output || git commit -m "feat: update collect"
+
+          git push
